--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -189,3 +189,35 @@ section {
 .testimonial-hero, .testimonial-hero img {
     width: 365px; height: 500px;
 }
+
+footer {
+    border-top: 1px solid $gray-200;
+    padding-top: 50px;
+
+    .brand-tagline {
+        color: $gray-500;
+    }
+
+    h6{
+        font-weight: 600;
+    }
+
+    .list-group-item{
+        padding: 0.3125rem 0;
+        border: 0;
+        a, span {
+            color: $gray-500;
+            font-weight: 300;
+        }
+        a {
+            @include hover-focus{
+                color: $gray-800;
+            }
+        }
+    }
+    .copyrights{
+        margin: 50px 0;
+        font-weight: 300;
+        color: $gray-500;
+    }
+}
