--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,6 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 @import "colorVariables";
 @import "functions";
 @import "variables";
@@ -195,7 +196,9 @@ footer {
     padding-top: 50px;
 
     .brand-tagline {
+        margin-top: 8px;
         color: $gray-500;
+        font-weight: 300;
     }
 
     h6{
